# mtg-collection-manager

./: pyproject.toml
scripts/: csv_to_deck.sh  deck_to_csv.sh
src/: main.py
