[tool.poetry]
name = "mtg-collection-manager"
version = "0.1.0"
description = ""
authors = ["Francis de Ladurantaye <f.deladurantaye@heyday.ai>"]
readme = "README.md"
packages = [{include = "mtg_collection_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.65.0"
pandas = "^2.0.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
